# un-mandates-housekeeping

./: .env.example  .env.template  .gitignore  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
data/input/ppb2026/: INFO
data/output/: ppb_outdated_citations.json
data/references/: entity_abbreviations.csv  section_to_entity_mapping.csv
docs/: AUTH.md  CONCEPT.md  DB.md
public/data/: budget_parts.json
public/data/paragraphs/: A_51_950.json  A_520_REV.20.json  A_71_755.json  A_71_818.json  A_73_716.json  A_74_821.json  A_77_489.json  A_78_737.json  A_79_733.json  A_79_735.json  A_79_736.json  A_79_741.json  A_79_744.json  A_79_750.json  A_79_751.json  A_79_752.json  A_79_755.json  A_79_761.json  A_79_765.json  A_79_767.json  A_HRC_PRST_15_2.json  A_HRC_PRST_18_2.json  A_HRC_PRST_19_1.json  A_HRC_PRST_20_1.json  A_HRC_PRST_22_1.json  A_HRC_PRST_29_1.json  A_HRC_PRST_35_1.json  A_HRC_PRST_OS_12_1.json  A_HRC_PRST_OS_13_1.json  A_HRC_PRST_OS_14_2.json  A_HRC_PRST_OS_15_1.json  A_HRC_PRST_OS_16_1.json  A_HRC_PRST_OS_17_1.json  A_HRC_PRST_OS_18_1.json  A_HRC_RES_12_10.json  A_HRC_RES_12_2.json  A_HRC_RES_14_5.json  A_HRC_RES_15_5.json  A_HRC_RES_16_1.json  A_HRC_RES_16_15.json  (+3024 more)
python/: analysis.py  llm_relevance.py  mentions.py
python/ppb_extraction/: INFO  docx_utils.py  extract_ppb_contents.py  parse_ppb_docs.py
src/app/: page.tsx
src/components/: DocumentSymbol.tsx  EntityDetail.tsx  EntityOverview.tsx  Tooltip.tsx
src/lib/: data-service.ts  db.ts  transformData.ts
src/types/: index.ts
(+51 files in other folders)
